resources/sass/listing.scss
/* ... */
.category-listing {
    margin-top: 20px;
}

.category-text {
    text-align: center;
    font-size: 20px;
    text-decoration: none;
    color: $secondary-color;
    margin-bottom: 40px;

    &:hover {
        text-decoration: none;
    }
}
@media only screen and (max-width: 768px) {
    .listing {
        .searchbar {
            top: 33px;
        }
    }
}

@media only screen and (max-width: 480px) {
    .category-img {
        min-height: 162px;
    }
    .listing,
    .category-page {
        .listing-container {
            .listing-top-controls {
                position: absolute;
            }
        }
    }
    .listing,
    .category-page {
        .listing-container {
            .listing-top-controls {
                position: relative;
                width: 100%;
                height: $listing-top-ctrl-height;

                .filter-toggle,
                .view-items-toggle {
                    margin: 5px;
                    font-size: 23px;
                }

                .dropdown {
                    margin: 5px;
                    text-align: center;

                    .dropdown-menu {
                        text-align: left;
                    }

                    .dropdown-toggle {
                        &:not(.dropdown-item) {
                            font-size: 22px;
                            color: $secondary-color;

                            &::after {
                                display: none;
                            }
                        }
                    }

                    .dropdown-item {
                        white-space: unset !important;
                        &:hover {
                            .dropdown-menu {
                                display: block;
                            }
                        }

                        &:active {
                            background-color: $secondary-color;
                        }

                        &::after {
                            display: none;
                        }

                        .fas.fa-angle-right {
                            font-size: 20px;
                        }
                    }
                }

                .breadcrumb {
                    position: relative;
                    float: left;
                    padding: 12px 5px;
                }
            }

            .products-container {
                margin-top: 45px;

                .ls-prod-container {
                    margin: auto;

                    .ls-product-div {
                        margin-bottom: 0px;
                        padding: 1px;

                        .ls-product {
                            margin-bottom: 0px;
                            min-height: 130px;
                            background-position: center;
                        }
                    }
                }
            }

            .filters {
                width: 100% !important;
                background: $secondary-color;
                color: $white;
                position: absolute;
                z-index: 100;
                display: none;

                &.show {
                    display: block;
                }

                &:before {
                    content: '';
                    position: absolute;
                    width: 0;
                    height: 0;
                    top: -18px;
                    right: 5px;
                    border-top: solid 10px transparent;
                    border-bottom: solid 10px $secondary-color;
                    border-left: solid 10px transparent;
                    border-right: solid 10px transparent;
                }

                hr {
                    color: $white;
                }

                .filter {
                    text-align: center;

                    ul {
                        white-space: normal;
                        text-align: left;
                        margin-right: 0;
                        li {
                            display: inline-block;
                            margin-right: 10px;
                            .filter-label {
                                .checkmark {
                                    border: 1px solid $white !important;

                                    &:after {
                                        left: 4px;
                                        top: 1px;
                                        width: 5px;
                                        height: 10px;
                                        border: solid $border-color;
                                        border-width: 0 3px 3px 0;
                                        -webkit-transform: rotate(45deg);
                                        transform: rotate(45deg);
                                    }
                                }
                            }
                        }
                    }

                    .irs-line {
                        border: 1px solid $white;
                        background-color: $white !important;
                    }
                }
            }
        }
    }

    .main-container {
        min-height: calc(
            100vh - #{$navbar-height-mobile} - #{$listing-top-ctrl-height}
        ) !important;
    }

    .dropdown-submenu {
        position: relative;

        @include media-breakpoint-down(md) {
            .dropdown-item {
                width: 90%;
                z-index: 5;
            }
            .dropdown-toggle {
                margin-top: 4px;
            }
        }
    }

    .dropdown-submenu a::after {
        transform: rotate(-90deg);
        position: absolute;
        right: 6px;
        top: 0.8em;
    }

    .dropdown-submenu .dropdown-menu {
        top: 0;
        left: 100%;
        margin-left: 0.1rem;
        margin-right: 0.1rem;
    }
}
.submenu-dropdown {
    padding: 10px;
}
/* ... */

